// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrayField component is correctly rendering with Add button 1`] = `
<div>
  <table
    className="table table-striped"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Name
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <div
            className="form-group   "
          >
            <input
              className="form-control"
              id="[object Object].textField"
              name="[object Object].textField"
              onChange={[Function]}
              type="text"
            />
            <div
              className="help-block"
              style={
                Object {
                  "float": "left",
                }
              }
            >
              
            </div>
          </div>
        </td>
        <td>
          <div
            className="form-group   "
          >
            <input
              className="form-control"
              id="[object Object].textField2"
              name="[object Object].textField2"
              onChange={[Function]}
              type="text"
            />
            <div
              className="help-block"
              style={
                Object {
                  "float": "left",
                }
              }
            >
              
            </div>
          </div>
        </td>
        <td>
          <button
            className="btn btn-outline-danger"
            onClick={[Function]}
            type="button"
          >
            Delete
          </button>
        </td>
      </tr>
      <tr>
        <td>
          <div
            className="form-group   "
          >
            <input
              className="form-control"
              id="[object Object].textField"
              name="[object Object].textField"
              onChange={[Function]}
              type="text"
            />
            <div
              className="help-block"
              style={
                Object {
                  "float": "left",
                }
              }
            >
              
            </div>
          </div>
        </td>
        <td>
          <div
            className="form-group   "
          >
            <input
              className="form-control"
              id="[object Object].textField2"
              name="[object Object].textField2"
              onChange={[Function]}
              type="text"
            />
            <div
              className="help-block"
              style={
                Object {
                  "float": "left",
                }
              }
            >
              
            </div>
          </div>
        </td>
        <td>
          <button
            className="btn btn-outline-danger"
            onClick={[Function]}
            type="button"
          >
            Delete
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="text-center"
  >
    <button
      className="btn btn-outline-success margin-bottom-lg"
      onClick={[Function]}
      type="button"
    >
      Add item
    </button>
  </div>
</div>
`;

exports[`ArrayField component is correctly rendering with no Add button 1`] = `
<div>
  <table
    className="table table-striped"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Name
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <div
            className="form-group   "
          >
            <input
              className="form-control"
              id="[object Object].textField"
              name="[object Object].textField"
              onChange={[Function]}
              type="text"
            />
            <div
              className="help-block"
              style={
                Object {
                  "float": "left",
                }
              }
            >
              
            </div>
          </div>
        </td>
        <td>
          <div
            className="form-group   "
          >
            <input
              className="form-control"
              id="[object Object].textField2"
              name="[object Object].textField2"
              onChange={[Function]}
              type="text"
            />
            <div
              className="help-block"
              style={
                Object {
                  "float": "left",
                }
              }
            >
              
            </div>
          </div>
        </td>
        <td>
          <button
            className="btn btn-outline-danger"
            onClick={[Function]}
            type="button"
          >
            Delete
          </button>
        </td>
      </tr>
      <tr>
        <td>
          <div
            className="form-group   "
          >
            <input
              className="form-control"
              id="[object Object].textField"
              name="[object Object].textField"
              onChange={[Function]}
              type="text"
            />
            <div
              className="help-block"
              style={
                Object {
                  "float": "left",
                }
              }
            >
              
            </div>
          </div>
        </td>
        <td>
          <div
            className="form-group   "
          >
            <input
              className="form-control"
              id="[object Object].textField2"
              name="[object Object].textField2"
              onChange={[Function]}
              type="text"
            />
            <div
              className="help-block"
              style={
                Object {
                  "float": "left",
                }
              }
            >
              
            </div>
          </div>
        </td>
        <td>
          <button
            className="btn btn-outline-danger"
            onClick={[Function]}
            type="button"
          >
            Delete
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
